<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:iconTint="@color/black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person"
            android:iconTint="@color/black"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_urp"
            android:icon="@drawable/ic_baseline_urp"
            android:iconTint="@color/black"
            android:title="@string/menu_urp" />
    </group>

    <item android:title="@string/menu_utilities">

        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings"
                android:iconTint="@color/black"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout"
                android:iconTint="@color/black"
                android:title="@string/menu_logout" />
        </menu>

    </item>
</menu>