<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_landing"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.androidstrike.landed.ui.landing.Home"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.androidstrike.landed.ui.landing.Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_urp"
        android:name="com.androidstrike.landed.ui.landing.URPlanning"
        android:label="@string/menu_urp"
        tools:layout="@layout/fragment_u_r_planning" />
</navigation>