<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_bg"
    tools:context=".ui.auth.SignIn">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_login_details"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/splash" />


    <LinearLayout
        android:id="@+id/layout_login_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/log_in_welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/log_in_welcome_note"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_margin="8dp"
                android:background="@drawable/auth_inner_bg"
                android:orientation="vertical">


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/log_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/sign_up_email"
                    android:inputType="textEmailAddress"
                    android:text="a@a.com" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/log_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/log_in_password"
                    android:inputType="textPassword"
                    android:text="qqqq1111"
                    app:passwordToggleEnabled="true" />


                <Button
                    android:id="@+id/log_in_btn_register"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in_button_confirm" />

                <TextView
                    android:id="@+id/login_tv_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/sign_up_text" />

                <TextView
                    android:id="@+id/login_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="16dp"
                    android:text="@string/log_in_forgot_password"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>