<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ForgotPassword">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/oops_image" />


    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/log_in_forgot_password"
            android:textColor="#000"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_margin="16dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/text_enter_email_for_password_reset"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/text_recover_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/sign_up_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />


                <Button
                    android:id="@+id/button_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="#d67601"
                    android:text="@string/text_reset_password"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>