<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Forever Garden"
        android:textColor="@color/black"
        android:padding="24dp"
        android:id="@+id/custom_title_land_name"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <View
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@color/royalBlue"/>

        <View
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@color/crimson"/>

        <View
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@color/green" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/custom_price_Label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_margin="8dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="24dp"
            android:id="@+id/custom_land_price"
            android:gravity="center_horizontal"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/custom_agent_name_Label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_margin="8dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="24dp"
            android:id="@+id/custom_agent_name"
            android:gravity="center_horizontal"/>


    </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/custom_location_name_Label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_margin="8dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="24dp"
            android:id="@+id/custom_location_name"
            android:gravity="center_horizontal"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_directions"
        android:id="@+id/btn_go_to_location"
        android:padding="24dp"
        android:layout_margin="24dp"
        style="@style/Widget.AppCompat.ImageButton"
        android:background="@color/indianred"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:text="@string/custom_contact_agent_button"
            android:backgroundTint="@color/royalBlue"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/btn_contact_agent"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:text="@string/custom_cancel_button"
            android:backgroundTint="@color/crimson"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/btn_cancel"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:text="@string/custom_pay_button"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/btn_pre_pay_confirm"/>

    </LinearLayout>
</LinearLayout>